# C-_Multithreaded_Video_Pipeline

./: CMakeLists.txt  benchmarks.md  main.cpp
benchmarks/: ConcurrentBenchmark.cpp  SequentialBenchmark.cpp
include/: BlurFilter.hpp  EdgeFilter.hpp  Filter.hpp  ThreadSafeQueue.hpp
src/: BlurFilter.cpp  EdgeFilter.cpp
